--- a/CSS/style6.css
+++ b/CSS/style6.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+    background-color: #313e54;
     }
       @font-face{
         font-family:hatton;
@@ -116,6 +116,7 @@ color: beige;
         align-items: center;
 width: 100%;
 height: 15vh;
+background-color: white;
 
 
     }
@@ -280,6 +281,313 @@ border: solid #268ecd;
     height: 90%;
     background-color: white;
     border: solid #268ecd;
+
+
+   }
+   @media(orientation:portrait){
+    body{
+        background-color: #313e54;
+    }
+    .maincontainer{
+        display: flex;
+        flex-direction: column;
+width: 100%;
+height: 100vh;
+
+
+
+
+
+
+
+    }
+    .maincontainer .cont1{
+        display: flex;
+        width: 100%;
+        height: 10%;
+        background-color: #313e54;
+flex-direction: row;
+align-items: center;
+justify-content: center;
+
+
+
+
+    }
+    .cont1 .logo{
+        display: none;
+        justify-content: center;
+        align-items: center;
+width: 100%;
+height: 25vh;
+background-color: #313e54;
+
+
+    }
+    .logo .best{
+        width: 90%;
+height: 80%;
+
+
+
+    }
+    .cont1 .dash{
+        display: flex;
+        flex-direction: column;
+       text-align: center;
+        align-items: center;
+        
+width: 80%;
+height: 100%;
+
+
+background-color: #313e54;
+
+
+
+
+
+
+        
+    }
+    .dash:hover{
+        transition: 0.5s;
+background-color: rgb(13, 105, 117);
+
+
+
+    }
+    .cont1 .linea{
+        display: none;
+        background-color: rgb(255, 255, 255);
+        width: 20%;
+        height: 1vh;
+    }
+    
+    .cont1 .ins {
+text-decoration: none;
+
+    }
+    .cont1 .b{
+color: white;
+width: 100%;
+
+    }
+    .cont1 .t1{
+        display: flex;
+width: 100%;
+height: 20%;
+font-size: 0.7vh;
+color: beige;
+font-family:hatton;
+margin-top: 2.5vh;
+
+
+
+    }
+    
+    
+    .maincontainer .cont2{
+
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+       
+
+
+    }
+    .cont2 .subuser{
+        display: flex;
+        
+        align-items: center;
+width: 100%;
+height: 5vh;
+background-color: white;
+
+
+    }
+    .subuser .mitad{
+        display: flex;
+       align-items: center;
+width: 50%;
+height: 100%;
+
+
+
+    }
+
+    .mitad .admn{
+       
+width: 100%;
+height: 20%;
+font-size: 1vh;
+font-family:hatton;
+margin-left: 3.4vh;
+
+
+    }
+    .mitad .user{
+width: 70%;
+height: 4vh;
+margin-left:4.2vh ;
+
+
+
+
+    }
+
+
+
+    .subuser .mitad2{
+        width: 50%;
+height: 100%;
+display: flex;
+flex-direction: row-reverse;
+align-items: center;
+
+
+
+    }
+    .mitad2 .button{
+        width: 30%;
+height: 3vh;
+margin-right: 1vh;
+background: none;
+border: solid orange;
+color: #268ecd;
+
+font-family: hatton;
+font-size: 1vh;
+
+    }
+    .button:hover{
+        transition: 1s;
+background-color: orange;
+
+
+    }
+   .cont2 .cont3{
+    display: flex;
+flex-direction: row;
+width: 100%;
+height: 100%;
+
+
+
+
+   }
+   .cont3 .menumin{
+    display: flex;
+    flex-direction: column;
+width: 10%;
+height: 100%;
+background-color: darkgray;
+
+
+   }
+   .modify-buttons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    
+width: 100%;
+height: 100%;
+
+
+   }
+   .modify-buttons .create{
+    width: 100%;
+    height: 3%;
+    
+  
+    font-family:hatton;
+    margin-top: 64%;
+   margin-bottom: 15%;
+    border: none;
+    background-color: #313e54;
+    color: white;
+    font-size: 1vh;
+    
+    
+    
+       }
+       .create:hover{
+      transition: 0.5s;
+    
+      background-color: rgb(13, 105, 117);
+      padding: 30%;
+     
+       }
+       .modify-buttons .search{
+       
+        width: 100%;
+        height: 3%;
+        font-family:hatton;
+       font-size: 1vh;
+        border: none;
+        background-color: #313e54;
+        color: white;
+        
+        
+        
+           }
+           .search:hover{
+            transition: 0.5s;
+    
+      background-color: rgb(13, 105, 117);
+      padding: 30%;
+           }
+           .cont3 .content_a{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+          
+            
+            
+            
+            
+               }
+               .content_a .row_a{
+            
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                height: 50%;
+                
+            
+               }
+               .content_a .row_b{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 50%;
+            height: 100%;
+            
+            
+               }
+               .row_b .put_graphics{
+            display: flex;
+            width: 90%;
+            height: 50%;
+            background-color: white;
+            border: solid #268ecd;
+            
+            
+               }
+               .cont3 .put_graphics2{
+                display: flex;
+                width: 50%;
+                height: 50%;
+                background-color: white;
+                border: solid #268ecd;
+            
+            
+               }
+
 
 
    }
