--- a/CSS/style7.css
+++ b/CSS/style7.css
@@ -133,11 +133,11 @@ height: 50%;
     .icono_general .size_images{
 width: 100%;
 height: 100%;
-
+transition: 1s;
 
     }
     .size_images:hover{
-        transition: 1s;
+        
 transform: rotate(360deg);
 
 
@@ -150,13 +150,14 @@ transform: rotate(360deg);
 text-decoration: none;
 
 color: #2e8dc6;
-
+transition: 0.8s;
 
     }
     .letter:hover{
-        transition: 1s;
+        
      
 background-color: orange;
+padding: 1vh;
 border-radius: 10vh;
 
     }
