--- a/CSS/style15.css
+++ b/CSS/style15.css
@@ -395,6 +395,7 @@ margin-left: 3%;
 
       }
       .container_code .enter_code{
+            display: flex;
 width: 40%;
 height: 50%;
 background-color: coral;
