--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -110,10 +110,11 @@ justify-content: center;
     border-radius: 3vh;
     color: white;
     font-size: 4vh;
+
     transition: 0.5s;
 }
 .boton:hover{
-    
+cursor: pointer;
 background-color: #268ecd;
 
 
